<resources>
  <!--  manifest-->
  <string name="app_name">Hillfort Sites</string>
  <string name="title_activity_map">Map</string>
  <string name="title_activity_site_maps">Map for all sites</string>
  <string name="title_activity_site">Site</string>
  <string name="title_activity_login"> Signup/Login to Site</string>
  <string name="title_activity_settings">Settings</string>
  <string name="title_activity_favourite">Favourites</string>
  <string name="title_activity_navigator">Navigator</string>
  <!--  activity_site.xml-->
  <string name="hint_siteName">Site Name</string>
  <string name="hint_siteDescription">Description</string>
  <string name="checkbox_visited">Visited</string>
  <string name="hint_date_visited">Date visited </string>
  <string name="button_addImage"> Add Image </string>
  <string name="hint_additionalNotes">Additional notes</string>
  <string name="favourite">Favourite</string>
  <!--  activity_site_list.xml-->
  <string name="search_by">Search by:</string>
  <string name="search_name">Name</string>
  <string name="search_desc">Description</string>
  <string name="search_notes">Notes</string>
  <!--  menu_main.xml-->
  <string name="menu_addSite">Add</string>
  <string name="menu_showMap">Show Map</string>
  <string name="menu_logout">Logout</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_favourite">Favourites</string>
  <string name="menu_search">Search</string>
  <string name="menu_navigator">Navigator</string>
  <!--  menu_site.xml-->
  <string name="menu_cancelSite">Cancel</string>
  <string name="menu_deleteSite">Delete</string>
  <string name="menu_saveSite">Save</string>
  <string name="menu_shareSite">Share</string>
  <!--  SiteView-->
  <string name="enter_site_name"> Please enter a Site Name</string>
  <string name="change_site_image">Change site image</string>
  <!--  SiteAdapter-->
  <string name="visited">Visited</string>
  <string name="not_visited">Not visited</string>
  <!--  ImageHelpers-->
  <string name="select_site_image">Select site image</string>
  <!--  activity_site_maps-->
  <string name="site_image_placeholder">Site Image</string>
  <string name="site_name_placeholder">Site Name</string>
  <string name="site_description_placeholder">Site Description</string>
  <!--  activity_navigator-->
  <string name="button_getDirection">Get direction</string>


</resources>