<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/item_search"
      android:title="@string/menu_search"
      android:icon="@android:drawable/ic_menu_search"
      app:actionViewClass="androidx.appcompat.widget.SearchView"
      app:showAsAction="always|collapseActionView" />

  <item
    android:id="@+id/item_add"
    android:icon="@android:drawable/ic_menu_add"
    android:title="@string/menu_addSite"
    app:showAsAction="always" />

  <item
    android:id="@+id/item_map"
    android:icon="@android:drawable/ic_menu_mapmode"
    android:title="@string/menu_showMap"
    app:showAsAction="ifRoom"/>

  <item
    android:id="@+id/item_navigator"
    android:title="@string/menu_navigator"
    android:orderInCategory="30"
    android:visible="true"
    app:showAsAction="never"/>

  <item
    android:id="@+id/item_logout"
    android:title="@string/menu_logout"
    android:orderInCategory="100"
    android:visible="true"
    app:showAsAction="never"/>

  <item
    android:id="@+id/item_settings"
    android:title="@string/menu_settings"
    android:orderInCategory="70"
    android:visible="true"
    app:showAsAction="never"/>

  <item
    android:id="@+id/item_favourite"
    android:title="@string/menu_favourite"
    android:orderInCategory="50"
    android:visible="true"
    app:showAsAction="never"/>



</menu>