<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.site.views.sitelist.SiteListView">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorAccent"
      android:fitsSystemWindows="true"
      app:elevation="0dip"
      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorPrimary" />
  </com.google.android.material.appbar.AppBarLayout>

  <TextView
      android:id="@+id/search_by"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="5dp"
      android:text="@string/search_by"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="12sp"
      app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <RadioGroup
      android:id="@+id/radioGrp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/search_by"
      android:gravity="center"
      android:orientation="horizontal"
      android:checkedButton="@id/radioName"
      app:layout_constraintTop_toBottomOf="@+id/search_by"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <RadioButton
        android:id="@+id/radioName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/search_name"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/radioDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/search_desc"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/radioNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/search_notes"
        android:textSize="12sp" />

  </RadioGroup>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:scrollbars="vertical"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      app:layout_constraintTop_toBottomOf="@+id/radioGrp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>